# inventory-tracker-software

./: .gitignore  .python-version  README.md  environment.yml  inventory_export.csv  pyproject.toml
aim_central/: AdvancedSampleCSV.csv  SimpleSampleCSV.csv  main.py  webapp.py
aim_central/config/: config.py
aim_central/controller/: Inventory.py  README.md
aim_central/drivers/: canDriver.py  gpsDriver.py
aim_central/inventory_database/: database.py
aim_central/logic/: CanDatabaseBridge.py  CentralSystem.py  DatabaseOperations.py  inventory.db  testInventory.json
aim_central/pipeline/: README.md
aim_central/utils/: config.py  logger.py  logging.py
aim_central/view/: CalibrateScreen.py  ContainerButton.py  ContainerDialog.py  ContainerSettingsWidget.py  GPSSettingsScreen.py  HomePage.html  HomeScreen.py  ItemSettingsWidget.py  README.md  TimeWidget.py  TopBarLayout.py  TriangleButton.py
aim_central_tests/drivers/: TestCanDriver.py  TestGpsDriver.py
aim_central_tests/logic/: TestCanDatabaseBridge.py  TestDatabaseOperations.py  TestRealDatabase.py
src/: main.py
src/controller/: Inventory.py
src/model/: CentralSystem.py  testInventory.json
src/view/: HomeScreen.py
