[project]
name = "aim"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Dhruv Dingari", email = "dingari.d@northeastern.edu"},
    {name = "Anastasia Lindquist", email = "lindquist.a@northeastern.edu"},
    {name = "Neirit Mahabub", email = "mahabub.n@northeastern.edu"},
]
dependencies = ["PyQt6==6.10.2", "attrs==25.4.0"]
requires-python = ">=3.10,<=3.13.5"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python aim_central/main.py"
test = "pytest"
test-cov = "pytest --cov=aim_central --cov-report=html"

[tool.pytest.ini_options]
testpaths = ["aim_central_tests"]
python_files = ["test_*.py", "*_test.py", "Test*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

