[project]
name = "aim"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Dhruv Dingari", email = "dingari.d@northeastern.edu"},
    {name = "Anastasia Lindquist", email = "lindquist.an@northeastern.edu"},
    {name = "Neirit Mahabub", email = "mahabub.n@northeastern.edu"},
]

dependencies = ["PyQt6>=6.10.2", "attrs==25.4.0", "python-can>=4.6.1", "pyserial>=3.5", "pandas<=3.0.2"]
requires-python = ">=3.10,<=3.13.5"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = {cmd = ["python3", "-m", "aim_central.main"]}

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
